--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:name=".application.SuperApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -44,9 +44,16 @@
             android:name=".activity.JoinWifiFailedActivity"
             android:screenOrientation="portrait" />
 
-        <service android:name="cn.xlink.sdk.v5.module.main.KeepAliveService" />
+        <service
+            android:name="cn.xlink.sdk.v5.module.main.KeepAliveService"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.AddSweeperAlarmActivity"></activity>
+        <activity
+            android:name=".activity.AddSweeperAlarmActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.SweeperSetActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
